[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock = { git = "https://github.com/DeathWish5/kernel-sync.git"}
buddy_system_allocator = "0.6"

[profile.release]
debug = true
